fixed games are not loaded to mwc
* fixed games are not loaded to mwc
* fixed processbuilder